--- a/front-dogs/src/app/components/create-pc/create-pc.component.html
+++ b/front-dogs/src/app/components/create-pc/create-pc.component.html
@@ -1,1 +1,60 @@
-<p>create-pc works!</p>
+<h2>New PC</h2>
+<h4 *ngIf="statusName == true">{{name}}</h4>
+
+<div class= "message success" *ngIf="status == 'success'">
+    The character has been created successfully
+</div>
+<div class= "message failed" *ngIf="status == 'failed'">
+    The character hasn't been created 
+</div>
+
+
+<form #PCForm="ngForm" >
+    <p>
+        <label for="name">Name</label>
+        <input type="text" name="name" #name="ngModel" [(ngModel)]="character.name"required/>
+        <span class="form_error" *ngIf="name.touched && !name.valid">
+            The character needs a name
+        </span>
+    </p>
+    <p>
+        <label for="background">Write a background for your character</label>
+        <textarea  name="background" #background="ngModel" [(ngModel)]="character.background"></textarea>
+        
+    </p>
+    <p>
+        <label for="description">Describe your character</label>
+        <textarea  name="description" #description="ngModel" [(ngModel)]="character.description"></textarea>
+        
+    </p>
+    <p>
+        <label for="img">Image</label>
+    </p>
+    <p>
+        <label for="backgroundKind">Select your background</label>
+        <ul>
+            <li>
+                <button (click)="getBackgroundKinds('5f4fa433bcc3c5148885305c')">Balanced</button>
+            </li>
+        </ul>
+
+        <!--<input list="backgroundKind" name="backgroundKind" #backgroundKind="ngModel" [(ngModel)]="character.backgroundKind" (click)="getBackgroundKind(5f4fa433bcc3c5148885305c)">
+        <datalist id="backgroundKind">
+          <option value="Balanced">
+          <option value="Complicated story" >
+          <option value="Relevant story">
+          <option value="Complicated community">
+          <option value="Strong community">
+        </datalist>-->
+        <div>
+            <p>
+                You have {{statsDice}}d6 for asing to stats<br>
+                <!--You have {{treats.4dice}}d4, {{treats.6dice}}d6, {{treats.8dice}}d8 and {{treats.10dice}}d10 for asing to tour treats
+                --></p>
+        </div>
+
+        
+    
+    <input type="submit" value="Create" (ngSubmit)= "onSubmit(PCForm)" />
+
+</form>
