--- a/front-dogs/src/app/components/new-game/new-game.component.html
+++ b/front-dogs/src/app/components/new-game/new-game.component.html
@@ -1,47 +1,59 @@
-<div class="container">
-    <h2>Create a new game</h2>
-    <div class= "message success" *ngIf="status == 'success'">
-        The game has been created successfully
-    </div>
-    <div class= "message failed" *ngIf="status == 'failed'">
-        The game hasn't been created 
-    </div>
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="http://localhost:4200/start">Dogs in the Vineyard</a>
+    <button class="btn btn-danger" type="button" [routerLink]="['/start']" [routerLinkActive]= "['actived']">
+       Back
+      </button>
+
+      
+  </nav>
+
+<br>
+<div *ngIf= "gameCreated == false">
+    <div class="container">
+        <h2>Create a new game</h2>
+        <div class= "message success" *ngIf="status == 'success'">
+            The game has been created successfully
+        </div>
+        <div class= "message failed" *ngIf="status == 'failed'">
+            The game hasn't been created 
+        </div>
+        
     
-    <form #gameForm="ngForm" (ngSubmit)="onSubmit(gameForm)">
-        <p>
+    <form id="newGame" #gameForm="ngForm" (ngSubmit)="onSubmit(gameForm)">
+        <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" name="name" #name="ngModel" [(ngModel)]="game.name"required/>
+            <input type="text" class="form-control" id="name" placeholder="Dogs of the Book"  #name="ngModel" [(ngModel)]="game.name" [ngModelOptions]="{standalone: true}" required>
             <span class="form_error" *ngIf="name.touched && !name.valid">
                 The game needs a name
             </span>
-        </p>
-        <p>
-            <label for="master">Game master</label>
-            <input type="text" name="master" #master="ngModel" [(ngModel)]="game.master"required/>
+        </div>
+        <div class="form-group">
+            <label for="master">Master</label>
+            <input type="text" class="form-control" id="master" placeholder="D.Vincent"  #master="ngModel" [(ngModel)]="game.master" [ngModelOptions]="{standalone: true}" required>
             <span class="form_error" *ngIf="master.touched && !master.valid">
-                The game needs a Game master
+                The game needs a master
             </span>
-        </p>
-        <p>
+        </div>
+        <div class="form-group">
             <label for="sinopsis">Sinopsis</label>
-            <textarea  name="sinopsis" #sinopsis="ngModel" [(ngModel)]="game.sinopsis"required></textarea>
+            <textarea class="form-control"  name="sinopsis" #sinopsis="ngModel" [(ngModel)]="game.sinopsis" [ngModelOptions]="{standalone: true}" required></textarea>
             <span class="form_error" *ngIf="sinopsis.touched && !sinopsis.valid">
                 The game needs a sinopsis
             </span>
-        </p>
-        <p>
+        </div>
+        <div class="form-group">
             <label for="numPlayers">How many players?</label>
-            <input type="number"  name="numPlayers" #numplayers="ngModel" [(ngModel)]="game.numPlayers"/>
-           
-        </p>
+            <input type="number" class="form-control"  name="numPlayers" #numplayers="ngModel" [(ngModel)]="game.numPlayers" [ngModelOptions]="{standalone: true}"/>
+        
+        </div>
         <input type="submit" value="Create" [disabled]="!gameForm.form.valid"/>
-    </form>
-
     
-
-
-
-
-
-
+    </form>
+    <br><br><br><br><br><br><br><br>
 </div>
+
+
+<div>
+    <app-create-pc [gameCharacter]=game.name></app-create-pc>
+</div>
+  <br>
